[package]
name = "rvkern"
version = "0.1.0"
authors = ["Stewart Tootill <stootill@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.0", features = ["spin_no_std"] }
rlibc = "1.0.0"
spin = "0.5.2"
riscv = "0.6.0"